--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,7 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@3.0.1/dist/vuetify.min.css"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@3.0.1/dist/vuetify.min.js"></script>
   </body>
 </html>
